# Vcam

./: .gitignore  :w  CMakeLists.txt  README.md  s1.json  sworld.json  todo.txt  world.json
src/: Utils.cpp  Utils.h  main.cpp  main_phong.cpp
src/Camera/: Camera.cpp  Camera.h
src/ColorfullFigure/: ColorfullNode.h  ColorfullWall.h
src/Config/: Config.h
src/Drawer/: Drawer.cpp  Drawer.h
src/Figure/: Figure.cpp  Figure.h  t_3dvec.h  t_Ball.h  t_Edge.h  t_Plane.h  t_Wall.h  t_World.h
src/LightHandler/: ConeLightSource.cpp  ConeLightSource.h  LightHandler.cpp  LightHandler.h
src/LightHandler/EnlightElems/: t_EnlightNode.h
src/Solid/: Edge.h  Solid.cpp  Solid.h
src/SolidParser/: JsonParser.cpp  JsonParser.h
src/WorldTransformer/: WorldTransformer.cpp  WorldTransformer.h
src/_Control/: Control.h
